// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppsDetailHeader should match a snapshot for desktop 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-flex-container el-mb5"
      >
        <mock-styled.div>
          <mock-styled.img
            alt="will-test-dev-co-voracious-person"
            classname="el-fade-in"
            src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-icon.png"
          />
        </mock-styled.div>
        <div
          class="el-flex-container el-flex-column el-flex-justify-between"
        >
          <div
            class="el-flex-container el-flex-column"
          >
            <h1
              class="el-text-base el-title el-has-no-margin"
            >
              will-test-dev-co-voracious-person
            </h1>
            <p
              class="el-text-base el-body-text el-has-grey-text"
            >
              Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
            </p>
          </div>
          <div
            class="el-flex-container"
          >
            <span
              class="el-mr5 el-intent-success el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name check"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M20.289 6.387a1.323 1.323 0 0 0-1.87 0l-8.42 8.42-3.741-3.743a1.323 1.323 0 0 0-1.87 1.87l4.676 4.678a1.32 1.32 0 0 0 1.87 0l9.355-9.354a1.323 1.323 0 0 0 0-1.87"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <small
              class="el-text-base el-small-text el-has-no-margin el-mr5"
            >
              Verified by Reapit
            </small>
            <div
              class="mocked-styled-166 el-badge-group"
            >
              <div
                class="mocked-styled-167 el-badge-group-inner"
              >
                <mock-styled.div
                  classname="el-fade-in"
                >
                  Category
                </mock-styled.div>
              </div>
            </div>
            <small
              class="el-text-base el-small-text el-has-bold-text el-has-no-margin el-mr5"
            >
              Integration
            </small>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-flex-container el-mb5"
    >
      <mock-styled.div>
        <mock-styled.img
          alt="will-test-dev-co-voracious-person"
          classname="el-fade-in"
          src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-icon.png"
        />
      </mock-styled.div>
      <div
        class="el-flex-container el-flex-column el-flex-justify-between"
      >
        <div
          class="el-flex-container el-flex-column"
        >
          <h1
            class="el-text-base el-title el-has-no-margin"
          >
            will-test-dev-co-voracious-person
          </h1>
          <p
            class="el-text-base el-body-text el-has-grey-text"
          >
            Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
          </p>
        </div>
        <div
          class="el-flex-container"
        >
          <span
            class="el-mr5 el-intent-success el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name check"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M20.289 6.387a1.323 1.323 0 0 0-1.87 0l-8.42 8.42-3.741-3.743a1.323 1.323 0 0 0-1.87 1.87l4.676 4.678a1.32 1.32 0 0 0 1.87 0l9.355-9.354a1.323 1.323 0 0 0 0-1.87"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <small
            class="el-text-base el-small-text el-has-no-margin el-mr5"
          >
            Verified by Reapit
          </small>
          <div
            class="mocked-styled-166 el-badge-group"
          >
            <div
              class="mocked-styled-167 el-badge-group-inner"
            >
              <mock-styled.div
                classname="el-fade-in"
              >
                Category
              </mock-styled.div>
            </div>
          </div>
          <small
            class="el-text-base el-small-text el-has-bold-text el-has-no-margin el-mr5"
          >
            Integration
          </small>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsDetailHeader should match a snapshot for mobile 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-flex-container el-mb5"
      >
        <div
          class="el-flex-container el-flex-column el-flex-justify-between"
        >
          <div
            class="el-flex-container el-flex-justify-between el-flex-align-end el-mb3"
          >
            <h2
              class="el-text-base el-subtitle el-has-bold-text el-has-no-margin mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
"
            >
              will-test-dev-co-voracious-person
            </h2>
            <div
              class="el-flex-container"
            >
              <span
                class="el-mr2 el-intent-success el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  title="Icon image with name check"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M20.289 6.387a1.323 1.323 0 0 0-1.87 0l-8.42 8.42-3.741-3.743a1.323 1.323 0 0 0-1.87 1.87l4.676 4.678a1.32 1.32 0 0 0 1.87 0l9.355-9.354a1.323 1.323 0 0 0 0-1.87"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <small
                class="el-text-base el-small-text el-has-no-margin el-mr2 mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
"
              >
                Verified by Reapit
              </small>
            </div>
          </div>
          <div
            class="el-flex-container"
          >
            <mock-styled.div>
              <mock-styled.img
                alt="will-test-dev-co-voracious-person"
                classname="el-fade-in"
                src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-icon.png"
              />
            </mock-styled.div>
            <small
              class="el-text-base el-small-text el-has-grey-text"
            >
              Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
            </small>
          </div>
          <div
            class="el-flex-container"
          >
            <div
              class="mocked-styled-166 el-badge-group"
            >
              <div
                class="mocked-styled-167 el-badge-group-inner"
              >
                <mock-styled.div
                  classname="el-fade-in"
                >
                  Category
                </mock-styled.div>
              </div>
            </div>
            <small
              class="el-text-base el-small-text el-has-bold-text el-has-no-margin el-mr5"
            >
              Integration
            </small>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-flex-container el-mb5"
    >
      <div
        class="el-flex-container el-flex-column el-flex-justify-between"
      >
        <div
          class="el-flex-container el-flex-justify-between el-flex-align-end el-mb3"
        >
          <h2
            class="el-text-base el-subtitle el-has-bold-text el-has-no-margin mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
"
          >
            will-test-dev-co-voracious-person
          </h2>
          <div
            class="el-flex-container"
          >
            <span
              class="el-mr2 el-intent-success el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name check"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M20.289 6.387a1.323 1.323 0 0 0-1.87 0l-8.42 8.42-3.741-3.743a1.323 1.323 0 0 0-1.87 1.87l4.676 4.678a1.32 1.32 0 0 0 1.87 0l9.355-9.354a1.323 1.323 0 0 0 0-1.87"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <small
              class="el-text-base el-small-text el-has-no-margin el-mr2 mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
"
            >
              Verified by Reapit
            </small>
          </div>
        </div>
        <div
          class="el-flex-container"
        >
          <mock-styled.div>
            <mock-styled.img
              alt="will-test-dev-co-voracious-person"
              classname="el-fade-in"
              src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-icon.png"
            />
          </mock-styled.div>
          <small
            class="el-text-base el-small-text el-has-grey-text"
          >
            Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
          </small>
        </div>
        <div
          class="el-flex-container"
        >
          <div
            class="mocked-styled-166 el-badge-group"
          >
            <div
              class="mocked-styled-167 el-badge-group-inner"
            >
              <mock-styled.div
                classname="el-fade-in"
              >
                Category
              </mock-styled.div>
            </div>
          </div>
          <small
            class="el-text-base el-small-text el-has-bold-text el-has-no-margin el-mr5"
          >
            Integration
          </small>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
